--- a/books/how-to-use-redimine/config.yaml
+++ b/books/how-to-use-redimine/config.yaml
@@ -7,6 +7,7 @@ chapters:
   - about
   - preparation
   - beginner
+  - search-everywhere
   - basic-file-operation
   - basic-text-operation
 toc_depth: 3
