Git操作は統合するため、ファイル名及びチャプター名を変更

--- a/books/how-to-use-redimine/config.yaml
+++ b/books/how-to-use-redimine/config.yaml
@@ -12,7 +12,7 @@ chapters:
   - basic-text-operation
   - terminal
   - run-source
-  - git-beginner
+  - git
   - run-anything
   - refactoring
   - debug
