Local-history編追加に伴い、目次を修正

--- a/books/how-to-use-redimine/config.yaml
+++ b/books/how-to-use-redimine/config.yaml
@@ -8,13 +8,14 @@ chapters:
   - preparation
   - beginner
   - search-everywhere
+  - terminal
   - basic-file-operation
   - basic-text-operation
-  - terminal
-  - run-source
-  - git
-  - run-anything
   - refactoring
+  - git
+  - local-history
+  - run-anything
+  - run-source
   - debug
   - db-client
 toc_depth: 3
