--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "zenn-cli": "^0.1.109"
+  },
+  "devDependencies": {
+    "textlint": "^13.4.1",
+    "textlint-rule-preset-ja-spacing": "^2.3.0",
+    "textlint-rule-preset-ja-technical-writing": "^9.0.0"
   }
 }
