chore: 執筆用の設定を追加

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "taichi.vscode-textlint"
+        "taichi.vscode-textlint",
+        "zenn.zenn-preview"
     ]
 }
